1. 修改客户端，更好的支持中文 2. 今日数据 模块，操作时暂停N秒数据刷新 3. 完成历史小时数据的展示 4. 查询模块悬浮方便点击 v1.26

--- a/ui-helper/src/res/common.css
+++ b/ui-helper/src/res/common.css
@@ -8,11 +8,22 @@
 
 .fixedSelect>div:first-child>div:first-child {
     position: fixed;
+    margin-left: 200px;
     padding: 5px;
     z-index: 1000;
-    background-color: aliceblue;
+        /* background-color: aliceblue; */
 }
 
 .fixedSelect>div:nth-child(2)>div:first-child {
     margin-top: 40px;
+}
+
+.mylight {
+    background-color: aliceblue;
+    /* light 主题的背景色 */
+}
+
+.mydark {
+    background-color:  #333
+    /* dark 主题的背景色 #333;*/
 }
