当后台通讯连续失败超过 N 次后，弹出框，提示异常，需要重启 初始化连接尝试次数和平时连接尝试次数均可在配置文件中配置 支持时间选项拖动 支持调整窗口时动态调整图表大小

--- a/ui-helper/src/res/common.css
+++ b/ui-helper/src/res/common.css
@@ -7,8 +7,9 @@
 }
 
 .fixedSelect>div:first-child>div:first-child {
+    cursor:move;
     position: fixed;
-    margin-left: 200px;
+    margin-left: 0px;
     padding: 5px;
     z-index: 1000;
         /* background-color: aliceblue; */
