--- a/ui-helper/src/res/common.css
+++ b/ui-helper/src/res/common.css
@@ -7,12 +7,15 @@
 }
 
 .fixedSelect>div:first-child>div:first-child {
-    cursor:move;
     position: fixed;
     margin-left: 0px;
     padding: 5px;
     z-index: 1000;
-        /* background-color: aliceblue; */
+    /* background-color: aliceblue; */
+}
+
+#fixedSpan {
+    cursor: move;
 }
 
 .fixedSelect>div:nth-child(2)>div:first-child {
@@ -25,6 +28,6 @@
 }
 
 .mydark {
-    background-color:  #333
-    /* dark 主题的背景色 #333;*/
+    background-color: #333
+        /* dark 主题的背景色 #333;*/
 }
