因大小适配问题，去除全屏功能 增加背景切换暂停功能 修复原先字体颜色修改不影响差异显示的bug

--- a/ui-helper/src/res/demo-screen.css
+++ b/ui-helper/src/res/demo-screen.css
@@ -38,7 +38,7 @@
 }
 
 .demo-allContain {
-    width: calc(100% - 6px);
+    width: 80%;
     margin: 0px;
     padding: 2px;
     border: 1px solid #ccc;
